# pdf-to-obsidian-markdown

./: README.md
.codex/skills/pdf-to-obsidian-md/: README.md  SKILL.md  pyproject.toml
.codex/skills/pdf-to-obsidian-md/assets/: md_template.md
.codex/skills/pdf-to-obsidian-md/references/: csharp-keywords.md  design-notes.md
.codex/skills/pdf-to-obsidian-md/scripts/: __init__.py  md_postprocess.py  ocr_fallback.py  pdf_to_obsidian.py  table_extract.py  validate_output.py
.codex/skills/pdf-to-obsidian-md/tests/: test_smoke.py
